# XBotGUI

./: .gitignore  CMakeLists.txt  README.md  cmake_options.h.in
configs/: xbotgui.xml
configs/bigman/: config_walkman.yaml
include/XBotGUI/: main_interface.h  utils.h
include/XBotGUI/interaction/: frame_marker.h  im_sequence_widget.h  im_single_widget.h  interactive_marker_widget.h  module.h  pi.h  render.h  status_manager.h  utility.h
include/XBotGUI/low_level_control/: chain.h  joint.h  robot.h
include/XBotGUI/status/: render.h
include/XBotGUI/utils/: Label_LineEdit.h  click_command_widget.h  cmd_service_widget.h  command_widget.h  empty_service_widget.h  gaze_command_widget.h  goal_command_widget.h  grasp_widget.h  interactive_markers_handler.h  interactive_markers_sequence_handler.h  led_status_widget.h  locomotion_command_widget.h  manipulation_map_utils_widget.h  object_properties.h  pose_command_widget.h  postural_command_widget.h  sequence_command_widget.h  status_widget.h  string_command_widget.h  traj_utils_move_reset_widget.h  trajectory_utils_widget.h
resources/: vrc_valve.dae  walkman_left_foot.dae  walkman_left_softhand.dae  walkman_right_foot.dae  walkman_right_softhand.dae
src/: main.cpp  main_interface.cpp  print_utils.cpp  utils.cpp
src/interaction/: frame_marker.cpp  im_sequence_widget.cpp  im_single_widget.cpp  interactive_marker_widget.cpp  module.cpp  pi.cpp  render.cpp  status_manager.cpp  utility.cpp
src/low_level_control/: chain.cpp  joint.cpp  robot.cpp
src/status/: render.cpp
src/utils/: Label_LineEdit.cpp  click_command_widget.cpp  cmd_service_widget.cpp  command_widget.cpp  empty_service_widget.cpp  gaze_command_widget.cpp  goal_command_widget.cpp  grasp_widget.cpp  interactive_markers_handler.cpp  interactive_markers_sequence_handler.cpp  led_status_widget.cpp  locomotion_command_widget.cpp  manipulation_map_utils_widget.cpp  object_properties.cpp  pose_command_widget.cpp  postural_command_widget.cpp  sequence_command_widget.cpp  status_widget.cpp  string_command_widget.cpp  traj_utils_move_reset_widget.cpp  trajectory_utils_widget.cpp
tests/: test_frame_marker.cpp
